--- a/server/views/layout.ejs
+++ b/server/views/layout.ejs
@@ -2,9 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Shortly</title>
+    
+      <title>Shortly</title>
+      
 
     <link rel="stylesheet" type="text/css" href="/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600" rel="stylesheet">
 
     <script src="/lib/jquery.js"></script>
     <script src="/lib/underscore.js"></script>
@@ -14,7 +22,12 @@
   </head>
 
   <body>
-    <h1>Shortly</h1>
+      <div class='banner-container'>
+        <h1 class='banner-title'>Shortly</h1>
+          
+        <h2 class='banner-slogan'>The Best Shortener in the Entire Galaxy</h2>
+      </div>
+    
     <%- body %>
   </body>
 </html>
