--- a/server/views/login.ejs
+++ b/server/views/login.ejs
@@ -1,17 +1,19 @@
-<h2>Login</h2>
-<form action="/login" method="post">
-    <div>
-      <label for="username">Username:</label>
-      <input id="username" type="text" name="username">
-    </div>
-    <div>
-      <label for="password">Password:</label>
-      <input id="password" type="password" name="password">
-    </div>
-    <div>
-      <input type="submit" value="Login">
-    </div>
-</form>
-<p>
-  <a href="/signup">Create an Account &rarr;</a>
-<p>
+<div class='login-container'>
+  <h2 class='login'>Login</h2>
+  <form action="/login" method="post">
+      <div class='username-container'>
+        <label id='username-login' for="username">Username:</label>
+        <input id="username" type="text" name="username">
+      </div>
+      <div class='password-container'>
+        <label id='password-login' for="password">Password:</label>
+        <input id="password" type="password" name="password">
+      </div>
+      <div>
+        <input type="submit" value="Login">
+      </div>
+  </form>
+  <p>
+    <a id='create-account' href="/signup">Create an Account &rarr;</a>
+  <p>
+</div>
